[gd_scene load_steps=12 format=3 uid="uid://bxotpxi13beet"]

[ext_resource type="Script" uid="uid://hjgicrqvk174" path="res://Prefabs/Enemy/batter.gd" id="1_wpk74"]
[ext_resource type="Texture2D" uid="uid://crmwvmq33mohf" path="res://Resources/batter.png" id="2_hlfug"]
[ext_resource type="FontFile" uid="uid://bygy2ydvsctvm" path="res://Resources/vcr_osd_mono.ttf" id="3_q4hra"]

[sub_resource type="Animation" id="Animation_gmla7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5ickb"]
resource_name = "damaged"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vgnw"]
_data = {
&"RESET": SubResource("Animation_gmla7"),
&"damaged": SubResource("Animation_5ickb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hakij"]
radius = 350.0

[sub_resource type="CircleShape2D" id="CircleShape2D_egk66"]
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fwpy1"]
radius = 60.075

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_si5ra"]
bg_color = Color(0, 0, 0, 0.607843)
skew = Vector2(0.5, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeksu"]
bg_color = Color(1, 0, 0, 1)
skew = Vector2(0.5, 0)
anti_aliasing = false

[node name="Batter" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_wpk74")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 3.8147e-06)
scale = Vector2(2.34483, 2.34483)
texture = ExtResource("2_hlfug")

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_1vgnw")
}
speed_scale = 0.25

[node name="Detection" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
show_behind_parent = true
shape = SubResource("CircleShape2D_hakij")
debug_color = Color(1, 1, 0, 0.0980392)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
shape = SubResource("CircleShape2D_egk66")
debug_color = Color(1, 1, 1, 0)

[node name="Hitbox" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
show_behind_parent = true
shape = SubResource("CircleShape2D_fwpy1")

[node name="HitTimer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -60.0
theme_override_styles/background = SubResource("StyleBoxFlat_si5ra")
theme_override_styles/fill = SubResource("StyleBoxFlat_xeksu")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="Health" type="RichTextLabel" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = -88.0
offset_right = 52.0
offset_bottom = -64.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_q4hra")
theme_override_font_sizes/normal_font_size = 20
text = "5"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
radius = 29.0

[connection signal="body_entered" from="Detection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
